// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests to the Button compoennt Visual tests to the "Button" component The components should be the same 1`] = `
<button
  className="sc-AxirZ eZZyOJ"
  onClick={[Function]}
>
  Play Again
</button>
`;

exports[`Tests to the Button compoennt Visual tests to the "Button" component The components should be the same 2`] = `
<button
  className="sc-AxjAm kAaWoH"
  onClick={[Function]}
>
  Rules
</button>
`;
